# cryptography_project_1

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  main.cpp
app/: Project1.cpp  Project2.cpp  main.cpp
include/: CoinFlipping.h  Crypto.h  Logger.h  Math.h  Polynomial.h  Types.h  Utils.h
src/: CoinFlipping.cpp  Crypto.cpp  Logger.cpp  Math.cpp  Polynomial.cpp  Utils.cpp
